final cd pipeline

--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -76,6 +76,8 @@ spec:
       params:
       - name: IMAGE
         value: "$(params.build-image)"
+      - name: DOCKERFILE
+        value: "app/Dockerfile" 
       runAfter:
         - tests
         - lint
